fix layout on mobile devices

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
 }
 
 body {
-    transform: scale(1.5);
     display: flex;
     align-items: center;
     flex-direction: column;
